Fix: Level numbers overlapping

--- a/src/App.scss
+++ b/src/App.scss
@@ -3786,7 +3786,7 @@ footer {
 
   .Level {
     h1 {
-      font-size: #{'min(5vw, 24px)'} !important;
+      font-size: 5vw !important;
     }
   }
 
